--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
-    "typeorm": "^0.3.17",
-    "reflect-metadata": "^0.1.13"
+    "pkce-challenge": "^5.0.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -29,4 +30,4 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
-} 
+}
