--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,5 +18,5 @@ jobs:
           script: |
             cd /var/www/WeHood-Backend
             git pull origin main
-            docker-compose down
-            docker-compose up --build -d 
+            docker compose down
+            docker compose up --build -d 
