fix(ts-node): require paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,9 @@
     }
   },
   "exclude": ["node_modules"],
-  "include": ["./src/**/*.ts"]
+  "include": ["./src/**/*.ts"],
+  "ts-node": {
+    // Do not forget to `npm i -D tsconfig-paths`
+    "require": ["tsconfig-paths/register"]
+  }
 } 
