--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,14 @@ services:
     networks:
       - wehood-network
 
+  mailhog:
+    image: mailhog/mailhog
+    ports:
+      - "1025:1025" # SMTP server
+      - "8025:8025" # Web interface
+    environment:
+      MH_HOSTNAME: mailhog
+
 volumes:
   postgres_data:
 
