--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typeorm": "typeorm-ts-node-commonjs"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.14",
     "bcryptjs": "^2.4.3",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
@@ -18,6 +19,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.9",
     "pg": "^8.11.3",
     "pkce-challenge": "^5.0.0",
     "reflect-metadata": "^0.1.13",
