feat: add sendVerificationCode endpoint

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,12 @@ DB_DATABASE=wehood_db
 JWT_SECRET=your_jwt_secret_key
 JWT_EXPIRES_IN=24h
 
+SMTP_FROM=noreply@example.com
+SMTP_HOST=example.com
+SMTP_PORT=xx
+SMTP_USER=noreply@example.com
+SMTP_PASSWORD=supersecret
+
 VKID_APPID=xxxxxxxx
 SERVER_URL=http://localhost:3000
 VKID_SCOPE="vkid.personal_info email"
