--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "typeorm": "typeorm-ts-node-commonjs"
   },
   "dependencies": {
+    "@types/axios": "^0.14.4",
     "@types/nodemailer": "^6.4.14",
+    "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^2.2.0",
