--- a/.env.example
+++ b/.env.example
@@ -18,4 +18,11 @@ SMTP_PASSWORD=supersecret
 
 VKID_APPID=xxxxxxxx
 SERVER_URL=http://localhost:3000
+APP_URL=wehood://
 VKID_SCOPE="vkid.personal_info email"
+
+OPENWEATHER_API_KEY="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+YANDEX_GEOCODER="xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
+YANDEX_GEOSUGGEST="xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
+YANDEX_LOCATOR="xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
+YANDEX_STATIC="xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
