--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.4",
+    "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.14",
+    "aws-sdk": "^2.1550.0",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
@@ -22,6 +24,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.9",
     "pg": "^8.11.3",
     "pkce-challenge": "^5.0.0",
