--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "ts-node src/index.ts",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "typeorm": "typeorm-ts-node-commonjs"
+    "typeorm": "typeorm-ts-node-commonjs",
+    "test:comments": "tsx --env-file=.env ./test/check_comments.ts"
   },
   "dependencies": {
     "@types/axios": "^0.14.4",
@@ -23,13 +24,17 @@
     "ejs": "^3.1.10",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "gigachat": "^0.0.14",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.9",
     "pg": "^8.11.3",
     "pkce-challenge": "^5.0.0",
+    "prompt": "^1.3.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.17"
+    "tsx": "^4.19.4",
+    "typeorm": "^0.3.17",
+    "zod": "^3.25.49"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -37,6 +42,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.5",
+    "@types/prompt": "^1.1.9",
     "i": "^0.3.7",
     "nodemon": "^3.0.2",
     "npm": "^11.4.1",
