--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "nodemailer": "^6.9.9",
     "pg": "^8.11.3",
     "pkce-challenge": "^5.0.0",
-    "prompt": "^1.3.0",
+    "prompts": "^2.4.2",
     "reflect-metadata": "^0.1.13",
     "tsx": "^4.19.4",
     "typeorm": "^0.3.17",
