feat: add fields to .env.example

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,10 @@ YANDEX_GEOCODER="xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
 YANDEX_GEOSUGGEST="xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
 YANDEX_LOCATOR="xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
 YANDEX_STATIC="xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
+
+LANGSMITH_TRACING=true
+LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
+LANGSMITH_API_KEY='lsv2_pt_xxxxx'
+LANGSMITH_PROJECT="default"
+
+GIGACHAT_API_KEY='xxxxx'
