--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@langchain/community": "^0.3.45",
     "@langchain/core": "^0.3.57",
     "@langchain/langgraph": "^0.3.0",
+    "@langchain/ollama": "^0.2.0",
     "@types/axios": "^0.14.4",
     "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.14",
