--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "typeorm": "typeorm-ts-node-commonjs",
-    "test:check-comment": "tsx --env-file=.env ./test/check_comment.ts"
+    "test:check-comment": "tsx --env-file=.env ./test/check_comment.ts",
+    "test:check-weather": "tsx --env-file=.env ./test/weather_recomendation.ts"
   },
   "dependencies": {
     "@langchain/community": "^0.3.45",
