--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:check-comment": "tsx --env-file=.env ./test/check_comment.ts",
     "test:check-weather": "tsx --env-file=.env ./test/weather_recomendation.ts",
     "test:check-summ-comments": "tsx --env-file=.env ./test/summ_comments.ts",
-    "test:c1": "tsx --env-file=.env ./test/gen_ava.ts"
+    "test:check-events": "tsx --env-file=.env ./test/event_gen_by_prompt.ts"
   },
   "dependencies": {
     "@langchain/community": "^0.3.45",
