--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ejs": "^3.1.10",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "firebase-admin": "^13.4.0",
     "gigachat": "^0.0.14",
     "jsonwebtoken": "^9.0.2",
     "langchain-gigachat": "^0.0.13",
