--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/mime-types": "^3.0.0",
     "@types/node": "^20.10.5",
     "@types/prompt": "^1.1.9",
     "i": "^0.3.7",
