--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "test:c1": "tsx --env-file=.env ./test/gen_ava.ts"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@langchain/community": "^0.3.45",
     "@langchain/core": "^0.3.57",
     "@langchain/langgraph": "^0.3.0",
     "@langchain/ollama": "^0.2.0",
     "@types/axios": "^0.14.4",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.14",
     "aws-sdk": "^2.1550.0",
@@ -31,7 +33,9 @@
     "ejs": "^3.1.10",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "filereader": "^0.10.3",
     "firebase-admin": "^12.0.0",
+    "fluent-ffmpeg": "^2.1.3",
     "gigachat": "^0.0.14",
     "jsonwebtoken": "^9.0.2",
     "langchain-gigachat": "^0.0.13",
@@ -43,6 +47,7 @@
     "reflect-metadata": "^0.1.13",
     "tsx": "^4.19.4",
     "typeorm": "^0.3.17",
+    "wavefile": "^11.0.0",
     "zod": "^3.25.49"
   },
   "devDependencies": {
